[FIX] web: padding in settings form view on small screen
On mobile the boolean toggle overflow the vertical separator line.

task-6025206

--- a/addons/web/static/src/webclient/settings_form_view/settings_form_view.scss
+++ b/addons/web/static/src/webclient/settings_form_view/settings_form_view.scss
@@ -182,3 +182,9 @@ body:not(.o_touch_device) .o_settings_container .o_field_selection {
        }
    }
 }
+
+@include media-breakpoint-down(md) {
+    .o_form_renderer .o_setting_left_pane .o_boolean_toggle.form-switch {
+        padding-left: $form-switch-width;
+    }
+}
